<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.15">
  <DUT Name="ST_GroupE_TE1_HMI" Id="{9743cbe7-7753-492f-95fe-ed06868c6d4c}">
    <Declaration><![CDATA[TYPE ST_GroupE_TE1_HMI :
STRUCT
	bZmienneTypoweDlaGE_TE1	: BOOL;
	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>