<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.15">
  <DUT Name="ST_GroupE_TE1_HMI_Link" Id="{bc72a316-da47-491d-a1bd-ff01585bf556}">
    <Declaration><![CDATA[TYPE ST_GroupE_TE1_HMI_Link EXTENDS ST_BaseGroupElement_HMI_Link :
STRUCT
	stGroupE_TE1		: ST_GroupE_TE1_HMI;
	
	stControlE1_TE1		: ST_ControlE_TE1_HMI_Link;
	stControlE2_TE1		: ST_ControlE_TE1_HMI_Link;
	
	stComponetE1_TE1	: ST_Component_TE1_HMI_Link;
	stComponetE2_TE1	: ST_Component_TE1_HMI_Link;
	stComponetE3_TE1	: ST_Component_TE1_HMI_Link;
	stComponetE4_TE1	: ST_Component_TE1_HMI_Link;
	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>