<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.15">
  <POU Name="FB_GroupE_TE1_HMI" Id="{78bc256a-fe4a-4404-bcb9-d308097daafd}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_GroupE_TE1_HMI EXTENDS FB_BaseGroupElement_HMI IMPLEMENTS ITF_GroupE_TE1_HMI
VAR
	itfGroupE_TE1Connector		: ITF_GroupE_TE1_HMI_Connector;
	refstGroupE_TE1Data			: REFERENCE TO ST_GroupE_TE1_HMI;
	
	itfCE1				: ITF_ControlE_TE1_HMI;
	itfCE2				: ITF_ControlE_TE1_HMI;

	itfC1				: ITF_Component_TE1_HMI;
	itfC2				: ITF_Component_TE1_HMI;
	itfC3				: ITF_Component_TE1_HMI;
	itfC4				: ITF_Component_TE1_HMI;
	
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[]]></ST>
    </Implementation>
    <Folder Name="ITF_NazwaPB_HMI" Id="{dbcbf66d-e36d-4a6b-9a09-29feff526425}" />
    <Method Name="FB_init" Id="{c0bbad32-3927-4f8f-b9c9-f0e5153bfca0}">
      <Declaration><![CDATA[METHOD FB_init : BOOL
VAR_INPUT
	bInitRetains : BOOL; // if TRUE, the retain variables are initialized (warm start / cold start)
	bInCopyCode : BOOL;  // if TRUE, the instance afterwards gets moved into the copy code (online change)
	itfBaseLoggerConnector			: ITF_BaseLogger_HMI_Connector;	//bezpośredni łącznik do logera
	itfGroupE_TE1Connector			: ITF_GroupE_TE1_HMI_Connector;
	itfCE1							: ITF_ControlE_TE1_HMI;
	itfCE2							: ITF_ControlE_TE1_HMI;
	itfC1								: ITF_Component_TE1_HMI;
	itfC2								: ITF_Component_TE1_HMI;
	itfC3								: ITF_Component_TE1_HMI;
	itfC4								: ITF_Component_TE1_HMI;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[//Przypisanie do elementu który własnie stworzyliśmy
THIS^.itfGroupE_TE1Connector := itfGroupE_TE1Connector;
//Przypisanie do elementów z biblioteki
THIS^.itfBaseLoggerElementConnector := itfGroupE_TE1Connector;
THIS^.itfBaseComponentConnector := itfGroupE_TE1Connector;
THIS^.itfBaseControlElementConnector := itfGroupE_TE1Connector;
THIS^.itfBaseGroupElementConnector := itfGroupE_TE1Connector;

THIS^.AddControlElement (itfControlElementHMI := itfCE1);
THIS^.itfCE1 := itfCE1;
THIS^.AddControlElement (itfControlElementHMI := itfCE2);
THIS^.itfCE2 := itfCE2;

THIS^.AddComponent (itfComponentHMI := itfC1);
THIS^.itfC1 := itfC1;
THIS^.AddComponent (itfComponentHMI := itfC2);
THIS^.itfC2 := itfC2;
THIS^.AddComponent (itfComponentHMI := itfC3);
THIS^.itfC3 := itfC3;
THIS^.AddComponent (itfComponentHMI := itfC4);
THIS^.itfC4 := itfC4;


//
THIS^.itfBaseLoggerConnector			:= itfBaseLoggerConnector;

IF (THIS^.itfGroupE_TE1Connector <> 0 AND
	THIS^.itfBaseLoggerElementConnector <> 0 AND
	THIS^.itfBaseComponentConnector	<> 0 AND
	THIS^.itfBaseControlElementConnector <> 0 AND
	THIS^.itfBaseGroupElementConnector <> 0 AND
	THIS^.itfBaseLoggerConnector <> 0) THEN
	THIS^.bIsInit						:= TRUE;
END_IF
]]></ST>
      </Implementation>
    </Method>
    <Method Name="LinkGroupEData" Id="{5081a8bb-0e15-4ab5-861d-121492c136e8}" FolderPath="ITF_NazwaPB_HMI\">
      <Declaration><![CDATA[METHOD LinkGroupEData : BOOL
VAR_INPUT
	stData				: REFERENCE TO ST_GroupE_TE1_HMI_Link;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[THIS^.refstGroupE_TE1Data REF= stData.stGroupE_TE1;

THIS^.refstBaseLoggerElementDataHMI REF= stData.stBaseLoggerElement;
THIS^.refstBaseComponentDataHMI REF= stData.stBaseComponent;
THIS^.refstBaseControlElementDataHMI REF= stData.stBaseControlElement;
THIS^.refstBaseGroupElementDataHMI REF= stData.stBaseGroupElement;

THIS^.itfCE1.LinkControlEData (stData := stData.stControlE1_TE1);
THIS^.itfCE2.LinkControlEData (stData := stData.stControlE2_TE1);

THIS^.itfC1.LinkComponentData (stData := stData.stComponetE1_TE1);
THIS^.itfC2.LinkComponentData (stData := stData.stComponetE2_TE1);
THIS^.itfC3.LinkComponentData (stData := stData.stComponetE3_TE1);
THIS^.itfC4.LinkComponentData (stData := stData.stComponetE4_TE1);


THIS^.CreateLinkToEventsMemory ();

IF (__ISVALIDREF (THIS^.refstGroupE_TE1Data) AND THIS^.IsLinkedReferences ()) THEN
	THIS^.bIsValidData		:= TRUE;
	LinkGroupEData		:= TRUE;
END_IF
]]></ST>
      </Implementation>
    </Method>
  </POU>
</TcPlcObject>